--- a/package.json
+++ b/package.json
@@ -1,10 +1,20 @@
 {
-  "name": "peersync",
+  "name": "peerconnect",
   "version": "1.0.0",
   "type": "module",
   "main": "./dist/index.js",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    },
+    "./react": {
+      "types": "./dist/react.d.ts",
+      "import": "./dist/react.js"
+    }
+  },
   "files": [
     "dist"
   ],
@@ -16,8 +26,21 @@
     "format": "prettier --write src"
   },
   "peerDependencies": {
-    "@tanstack/react-query": ">=5.0.0",
-    "react": ">=18.0.0"
+    "react": ">=18.0.0",
+    "@tanstack/react-query": ">=5.0.0"
+  },
+  "peerDependenciesMeta": {
+    "react": {
+      "optional": true
+    },
+    "@tanstack/react-query": {
+      "optional": true
+    }
+  },
+  "dependencies": {
+    "@tanstack/react-query": "^5.0.0",
+    "@types/react-dom": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@tanstack/react-query-devtools": "^5.59.20",
@@ -34,11 +57,5 @@
     "vite-plugin-dts": "^3.0.0",
     "vite-plugin-node-polyfills": "^0.22.0",
     "vitest": "^0.34.6"
-  },
-  "dependencies": {
-    "@testing-library/react": "^16.0.1",
-    "@types/react-dom": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "vitest": "^2.1.4"
   }
 }
